[package]
name = "connection-manager"
version = "0.1.0"
authors = ["conectado <gabrielalejandro7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = { version = "0.10", features = ["qlog"] }
ring = "0.16"
log = { version = "0.4", features = ["std"] }
tokio = { version = "1", features = ["full"] }
url = "1"
env_logger = "0.6"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
