[package]
name = "server"
version = "0.1.0"
authors = ["conectado <gabrielalejandro7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = { version = "0.10" }
ring = "0.16"
log = { version = "0.4", features = ["std"] }
env_logger = "0.8"
connection-manager = { path = "../connection-manager", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
